// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ak huge 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS2 {
  padding-horizontal: 10px;
  padding-top: 10px;
  height: 80;
}

.IS3 {
  align-self: flex-end;
  width: 85%;
  margin-top: -25px;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "height": 243,
      "marginHorizontal": "10px",
      "overflow": "hidden",
    }
  }
  url="/crossword/123"
  withStar={false}
>
  <View
    className="IS2"
  >
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS1"
    >
      Times Concise medium No 7881
    </Text>
  </View>
  <Image
    aspectRatio={1.5}
    className="IS3"
    disablePlaceholder={true}
    fill={true}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;

exports[`tile ak medium 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS2 {
  padding-horizontal: 10px;
  padding-top: 10px;
  height: 80;
}

.IS3 {
  align-self: flex-end;
  width: 85%;
  margin-top: -25px;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "height": 143,
      "marginHorizontal": "10px",
      "overflow": "hidden",
    }
  }
  url="/crossword/123"
  withStar={false}
>
  <View
    className="IS2"
  >
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS1"
    >
      Times Concise medium No 7881
    </Text>
  </View>
  <Image
    aspectRatio={1.5}
    className="IS3"
    disablePlaceholder={true}
    fill={true}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;

exports[`tile ak wide 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS2 {
  padding-horizontal: 10px;
  padding-top: 10px;
  height: 80;
}

.IS3 {
  align-self: flex-end;
  width: 85%;
  margin-top: -25px;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "height": 195,
      "marginHorizontal": "10px",
      "overflow": "hidden",
    }
  }
  url="/crossword/123"
  withStar={false}
>
  <View
    className="IS2"
  >
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS1"
    >
      Times Concise medium No 7881
    </Text>
  </View>
  <Image
    aspectRatio={1.5}
    className="IS3"
    disablePlaceholder={true}
    fill={true}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;

exports[`tile ak without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS2 {
  padding-horizontal: 10px;
  padding-top: 10px;
  height: 80;
}

.IS3 {
  align-self: flex-end;
  width: 85%;
  margin-top: -25px;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "height": 143,
      "marginHorizontal": "10px",
      "overflow": "hidden",
    }
  }
  url="/crossword/123"
  withStar={false}
>
  <View
    className="IS2"
  >
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS1"
    >
      Times Concise medium No 7881
    </Text>
  </View>
  <Image
    aspectRatio={1.5}
    className="IS3"
    disablePlaceholder={true}
    fill={true}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;
